# pr-manager

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  publish.sh  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
mcp_server/: __init__.py  __main__.py  cli.py  evaluator.py  github_client.py  pyproject.toml  server.py
src/: extension.ts
tests/: conftest.py  test_evaluator.py  test_github_client.py  test_server.py
