[project]
name = "pr-review-mcp-server"
version = "1.1.0"
description = "MCP server + CLI for GitHub PR review comment management"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aurodeepta Pattnayak"},
]
keywords = ["github", "pull-request", "review", "mcp", "copilot", "code-review"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/apattnay/pr-manager"
Repository = "https://github.com/apattnay/pr-manager"
Changelog = "https://github.com/apattnay/pr-manager/blob/main/CHANGELOG.md"
Issues = "https://github.com/apattnay/pr-manager/issues"

[project.scripts]
pr-review = "cli:main"

[tool.setuptools]
py-modules = ["cli", "server", "evaluator", "github_client"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
